--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,31 +58,43 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 5 (12/09)</h1>
+    <h1>GDWD 108 Agenda for Day 6 (12/12)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
-      <h2>Period 1 (5:30-6:20): Presentations (Photoshop/InDesign)</h2>
-      <h2>Period 2 (6:30-7:20): Presentations (Photoshop/InDesign)</h2>
-      <h2>Period 3 (8:10-9:50): Presentations? and Lab Time</h2>
-      <h2>Period 4 (10:00-10:50): Lab Time</h2>
+      <h2>Period 1 (5:30-6:20): Lab Time</h2>
+      <h2>Period 2 (6:30-7:20): Lab Time (Planning Assignment Projects Due)</h2>
+      <h2>Period 3 (8:10-9:50): Critiques!</h2>
+      <h2>Period 4 (10:00-10:50): Critiques? &amp; Lab Time</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
+        <span>Planning Assignment - Illustrator/Motion Graphics Projects</span>
+        <span>TODAY by 7:20pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Critiques for Evan H, Calen, Devon, Crystiana, Desiree</span>
+        <span>TODAY starting at 8:10pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Planning Assignment - Weekly Plan II</span>
+        <span>TODAY by 11:15pm</span>
+      </h2>
+      <h2 class="assnItem warning">
         <span>Presentations - Photoshop/InDesign</span>
-        <span>Beginning of class TODAY</span>
+        <span>Last Week</span>
       </h2>
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Project Turn-in - Photoshop/InDesign Final Drafts</span>
-        <span>Due TODAY at 11:15pm</span>
+        <span>Last week (Revisions due tomorrow)</span>
       </h2>
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Project Turn-in - Photoshop/InDesign Process Post</span>
-        <span>Due TODAY at 11:15pm</span>
+        <span>Last week (Revisions due tomorrow)</span>
       </h2>
     </div>
 
@@ -114,7 +126,7 @@
         <span>12/08 (Day 04)</span>
         <span>Photoshop/InDesign - Lab Day</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/09 (Day 05)</span>
         <span>Photoshop/InDesign - Presentations and Project Turn-in Assignments</span>
       </div>
