--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,43 +58,23 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 7 (12/13)</h1>
+    <h1>GDWD 108 Agenda for Day 8 (12/14)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
       <h3>(if you're not here by 5:40, you're tardy!)</h3>
       <h2>Period 1 (5:30-6:20): Lab Time</h2>
       <h2>Period 2 (6:30-7:20): Lab Time</h2>
-      <h2>Period 3 (8:10-9:50): Critiques!</h2>
-      <h2>Period 4 (10:00-10:50): Critiques? &amp; Lab Time</h2>
+      <h2>Period 3 (8:10-9:50): Lab Time</h2>
+      <h2>Period 4 (10:00-10:50): Lab Time</h2>
       <h2>Wrap Up (11:00-11:15)</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Critiques for Jordan, August, Evan M, Tyler, Jessica</span>
-        <span>Today starting at 8:10pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Planning Assignment - Illustrator/Motion Graphics Projects</span>
-        <span>Yesterday</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Critiques for Evan H, Calen, Devon, Crystiana, Desiree</span>
-        <span>Yesterday</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Planning Assignment - Weekly Plan II</span>
-        <span>Yesterday</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Project Turn-in - Photoshop/InDesign Final Drafts</span>
-        <span>Last week (Revisions due TODAY)</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>Project Turn-in - Photoshop/InDesign Process Post</span>
-        <span>Last week (Revisions due TODAY)</span>
+        <span>Due yesterday</span>
       </h2>
     </div>
 
@@ -135,7 +115,7 @@
         <span>12/12 (Day 06)</span>
         <span>Illustrator/Motion Graphics - Planning Assignments and Critiques Part 1</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/13 (Day 07)</span>
         <span>Illustrator/Motion Graphics - Critiques Part 2</span>
       </div>
