--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 8 (12/14)</h1>
+    <h1>GDWD 108 Agenda for Day 9 (12/15)</h1>
     <div id="agenda">
       <h2>Office Hours (4:30-5:30): Available Upon Request</h2>
       <h2>Announcements (5:35)</h2>
@@ -72,9 +72,17 @@
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>Critiques for Jordan, August, Evan M, Tyler, Jessica</span>
-        <span>Due yesterday</span>
+      <h2 class="assnItem">
+        <span>Presentations - Illustrator/Motion Graphics</span>
+        <span>Starting beginning of class tomorrow</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Project Turn-in - Illustrator/Motion Graphics (Final Drafts)</span>
+        <span>Due tomorrow at 11:15pm</span>
+      </h2>
+      <h2 class="assnItem">
+        <span>Project Turn-in - Illustrator/Motion Graphics (Process Post)</span>
+        <span>Due tomorrow at 11:15pm</span>
       </h2>
     </div>
 
@@ -119,7 +127,7 @@
         <span>12/13 (Day 07)</span>
         <span>Illustrator/Motion Graphics - Critiques Part 2</span>
       </div>
-      <div class="agendaItem">
+      <div class="agendaItem done">
         <span>12/14 (Day 08)</span>
         <span>Illustrator/Motion Graphics - Lab Day</span>
       </div>
