--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -144,27 +144,31 @@
         <span>12/19 - 01/02</span>
         <span>Winter Break!</span>
       </div>
+      <div class="agendaItem">
+        <span>12/19 - 12/21</span>
+        <span>Lab Days: 9am - 5:30pm</span>
+      </div>
       <br><br>
       <div class="agendaItem">
         <span>01/03 (Day 11)</span>
-        <span>Web Development/Resume - Planning Assignments and Critiques Part 1</span>
+        <span>Web Development/UI/UX/Resume - Planning Assignments and Critiques Part 1</span>
       </div>
       <div class="agendaItem">
         <span>01/04 (Day 12)</span>
-        <span>Web Development/Resume - Critiques Part 2</span>
+        <span>Web Development/UI/UX/Resume - Critiques Part 2 | Final Exam Review #1</span>
       </div>
       <div class="agendaItem">
         <span>01/05 (Day 13)</span>
-        <span>Web Development/Resume - Lab Day</span>
+        <span>Web Development/UI/UX/Resume - Lab Day | Final Exam Review #2</span>
       </div>
       <div class="agendaItem">
         <span>01/06 (Day 14)</span>
-        <span>Web Development/Resume - Lab Day and Project Turn-in Assignments</span>
+        <span>Web Development/UI/UX/Resume - Presentations and Project Turn-in Assignments | Final Exam Review #3</span>
       </div>
       <br><br>
       <div class="agendaItem">
         <span>01/09 (Day 15)</span>
-        <span>Final Portfolio Site - Presentations | Exit Exam</span>
+        <span>Exit Exam | Exit Surveys | Final Portfolio Site - Presentations</span>
       </div>
     </div>
 
