--- a/greenSock1/index2.html
+++ b/greenSock1/index2.html
@@ -5,11 +5,272 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link href="css/grid.css" rel="stylesheet">
+        <style>
+            #demo {
+                /* max-width: 1000px; */
+                margin: 0 auto;
+                display: flex;
+                flex-wrap: wrap;
+            }
+            .green {
+                background-color: green;
+            }
+            .box {
+                margin: 0px 12px 12px 0px;
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+            }
+        </style>
     </head>
     <body>
         <h2>GSAP 3 Stagger Demo</h2>
         <div id="demo">
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
+            <div class="box green"></div>
             <div class="box green"></div>
             <div class="box green"></div>
             <div class="box green"></div>
